k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: car-rental-app
  name: car-rental-app
spec:
  ports:
  - name: 4200-tcp
    port: 4200
    protocol: TCP
    targetPort: 4200
  selector:
    app: car-rental-app
  sessionAffinity: None
  type: NodePort
