k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: car-rental-app
  name: car-rental-app
spec:
  port:
    targetPort: 4200-tcp
  to:
    kind: Service
    name: car-rental-app
    weight: 100
